# yaeval-harness

./: .gitignore  README.md  interface.py  main.py  pyproject.toml  requirements.txt
codethink/: __init__.py  __main__.py  _data.py  _system_message.py  _task.py  dataset.py  evaluation.py  interface.py  metrics.py  utils.py
codethink/dataset/: NumGLUE-Type_1.jsonl  NumGLUE-Type_3.jsonl  __init__.py  _data.py  _postprocess.py  _task.py  aime.py  algebra.py  aqua.py  arc_challenge.py  bbh.py  coinflip.py  commonsense_qa.py  data.py  finqa.py  gsm8k.py  gsm_hard.py  hendrycks_math.py  indo_mmlu.py  lastletterconcat.py  mathqa.py  mgsm.py  multiarith.py  num_glue.py  open_r1_math220k.py  svamp.py  tabmwp.py  utils.py
codethink/dataset/num_glue/: NumGLUE-Type_2.jsonl  NumGLUE-Type_4.jsonl  NumGLUE-Type_7.jsonl  NumGLUE-Type_8.jsonl  num_glue.py
codethink/logging/: usage.py
codethink/prompt/: __init__.py  base_prompt.py  routing_prompt.py  system_prompts.py
codethink/response/: __init__.py  code_responses.py  cot_responses.py
codethink/task/: __init__.py  _task.py  base_data.py  base_task.py  commonsense_qa.py  utils.py
codethink/task/tydiqa/: tydiqa.py
configs/: dpo-gemma2-9b-instruct.yaml  dpo-llama3.1-8b-instruct.yaml  dpo-qwen2.5-8b-instruct.yaml
preference_tuning/configs/: dpo-gemma2-9b-instruct.yaml  dpo-llama3.1-8b-instruct-PL-100p.yaml  dpo-llama3.1-8b-instruct-PL-25p.yaml  dpo-llama3.1-8b-instruct-PL-50p.yaml  dpo-llama3.1-8b-instruct-PL-75p.yaml  dpo-llama3.1-8b-instruct.yaml  dpo-qwen2.5-8b-instruct.yaml  sft-llama3.1-8b-instruct-PL-100p.yaml  sft-llama3.1-8b-instruct-PL-25p.yaml  sft-llama3.1-8b-instruct-PL-50p.yaml  sft-llama3.1-8b-instruct-PL-75p.yaml
preference_tuning/dataset/: __init__.py  _dataset.py  construct_preference_dataset.py  mathinstruct_preference.py
yeval/: __main__.py  evaluation.py
yeval/log/: usage.py
yeval/metrics/: __init__.py  math_eval.py  pass_at_k.py
yeval/prompt/: __init__.py  base_prompt.py  routing_prompt.py  system_prompts.py
yeval/response/: __init__.py  math_responses.py  routing.py
yeval/task/: __init__.py  aime.py  arc.py  base_data.py  base_task.py  commonsense_qa.py  diff_strat_mmlu.py  diff_strat_mmlu_pro.py  diff_strat_mmlu_redux.py  finqa.py  global_mmlu.py  gsm8k.py  gsm_hard.py  gsm_plus.py  gsm_symbolic.py  hendrycks_math.py  mmlu_pro.py  mmlu_redux.py  mmlu_redux_pass.py  patch_mbpp.py  tabmwp.py  tabmwp_dev.jsonl
yeval/task/ifeval/: evaluation_lib.py  ifeval.py  instructions.py  instructions_util.py
yeval/task/num_glue/: NumGLUE-Type_6.jsonl  num_glue.py
yeval/task/tydiqa/: tydiqa.py
yeval/utils/: api_postprocess.py  general.py
