[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yeval"
version = "0.0.1"
authors = [
    {name="Lintang Sutawika", email="lsutawik@andrew.cmu.edu"}
]
description = "For Evaluating Code Reasoning"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
license = { "text" = "MIT" }
dependencies = [
    "datasets",
    "transformers",
    "accelerate",
    "tqdm",
    "jsonlines",
    "evaluate",
    "math-verify",
    "vllm"
]

[tool.setuptools.packages.find]
include = ["yeval*"]

# required to include yaml files in pip installation
[tool.setuptools.package-data]
yeval = ["**/*.yaml", "tasks/**/*"]

[project.scripts]
yeval = "yeval.__main__:main"

[project.urls]
Homepage = "https://github.com/lintangsutawika/chain-of-code-thinking"
Repository = "https://github.com/lintangsutawika/chain-of-code-thinking"

[project.optional-dependencies]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["yeval"]

[tool.ruff.lint.extend-per-file-ignores]
# "__init__.py" = ["F401","F402","F403"]
# "utils.py" = ["F401"]
